# spacetime-raytracer

./: .gitignore  Cargo.toml  README.md  build.rs
cache/: placeholder.txt
softbodyimages/: testimg.xcf
src/: boilerplate.rs  debugui.rs  keyboard.rs  logimpl.rs  main.rs  querybank.rs
src/twoplusone/: common.glsl  mod.rs  object_archive.txt  point_render_nr.rs  points_norel.glsl  render_norel.glsl  render_rel.glsl  softbody.rs  softbodyrk4.glsl  utils.rs
src/twoplusone/aloofbody/: render_norel.glsl
src/twoplusone/softbody/: collision_grid_update.glsl  common.glsl  mod.rs  point_render_nr.rs  points_norel.glsl  relativity.glsl  softbodyrk4.glsl
src/twoplusone/softbody/spv/: collision_grid_update_FILL_LOOKUP.spv  collision_grid_update_SORT_LOOKUP.spv  collision_grid_update_UPDATE_START_INDICES_1.spv  collision_grid_update_UPDATE_START_INDICES_2.spv  points_norel_FRAGMENT_SHADER.spv  points_norel_VERTEX_SHADER.spv  softbodyrk4_EULER.spv  softbodyrk4_RK4STAGE_0.spv  softbodyrk4_RK4STAGE_1.spv  softbodyrk4_RK4STAGE_2.spv  softbodyrk4_RK4STAGE_3.spv  softbodyrk4_RK4STAGE_4.spv
src/twoplusone/worldline/: mod.rs  problem-statement.txt  raytrace.glsl  worldline3d.glsl  worldline_updatesoftbodies.glsl
src/twoplusone/worldline/spv/: worldline_updatesoftbodies_CLEAR_EDGE_MAP.spv  worldline_updatesoftbodies_IDENTIFY_BOUNDARY.spv  worldline_updatesoftbodies_IDENTIFY_EDGES.spv  worldline_updatesoftbodies_IDENTIFY_VERTICES.spv  worldline_updatesoftbodies_IDENTIFY_VERTICES_AND_EDGES.spv  worldline_updatesoftbodies_WRITE_EDGES_TO_WORLDLINE.spv  (+1 more)
